// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QrCodeScanner renders correctly when not showing camera 1`] = `
<View
  style={
    {
      "flex": 1,
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 0,
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
        "margin": 16,
      }
    }
  >
    <View
      style={
        {
          "bottom": 0,
          "flex": 1,
        }
      }
    />
  </View>
</View>
`;

exports[`QrCodeScanner renders correctly when not showing camera with children 1`] = `
<View
  style={
    {
      "flex": 1,
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 0,
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
        "margin": 16,
      }
    }
  >
    <View
      style={
        {
          "bottom": 0,
          "flex": 1,
        }
      }
    >
      <Text>
        Text
      </Text>
    </View>
  </View>
</View>
`;

exports[`QrCodeScanner renders correctly when permissions are denied 1`] = `
<View
  style={
    {
      "flex": 1,
      "overflow": "hidden",
    }
  }
>
  <Text>
    Permissions for camera denied
  </Text>
  <View
    style={
      {
        "bottom": 0,
        "flex": 1,
      }
    }
  />
</View>
`;

exports[`QrCodeScanner renders correctly when requesting for permissions 1`] = `
<View
  style={
    {
      "flex": 1,
      "overflow": "hidden",
    }
  }
>
  <Text>
    Requesting camera permissions
  </Text>
  <View
    style={
      {
        "bottom": 0,
        "flex": 1,
      }
    }
  />
</View>
`;

exports[`QrCodeScanner renders correctly when showing camera 1`] = `
<View
  style={
    {
      "flex": 1,
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 0,
      }
    }
  >
    <View />
  </View>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
        "margin": 16,
      }
    }
  >
    <View
      style={
        {
          "bottom": 0,
          "flex": 1,
        }
      }
    />
  </View>
</View>
`;

exports[`QrCodeScanner renders correctly when showing camera with children 1`] = `
<View
  style={
    {
      "flex": 1,
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 0,
      }
    }
  >
    <View />
  </View>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
        "margin": 16,
      }
    }
  >
    <View
      style={
        {
          "bottom": 0,
          "flex": 1,
        }
      }
    >
      <Text>
        Text
      </Text>
    </View>
  </View>
</View>
`;
